--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -1,31 +1,46 @@
-  body {
-  background-image: url("D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/background.png");
-  background-repeat: repeat;
-  padding: 0px;
-  margin: 0px;
-  width:100%;
-  height: 100%;
-  font-family: verdana;
-  font-size: 14px;
-  color: #000000;
-}
+    body {
+    background-image: url("D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/background.png");
+    background-repeat: repeat;
+    padding: 0px;
+    margin: 0px;
+    width:100%;
+    height: 100%;
+    font-family: verdana;
+    font-weight: bold;
+    color: #000000;
+    white-space: pre;
+    text-align: center;
+  }
 
-.iconeSobre {
-  max-width: 50px;
-  max-height: 50px;
-  position: absolute;
-  bottom: 20px;
-  right: 120px;
-}
+  .iconeSobre {
+    max-width: 50px;
+    max-height: 50px;
+    position: absolute;
+    bottom: 20px;
+    right: 120px;
+  }
 
-.iconeContato {
-  max-width: 50px;
-  max-height: 50px;
-  position: absolute;
-  bottom: 20px;
-  right: 50px;
-}
+  .iconeContato {
+    max-width: 50px;
+    max-height: 50px;
+    position: absolute;
+    bottom: 20px;
+    right: 50px;
+  }
 
-.imagemPrincipal {
-  border-radius: 50%;
-}
+  .fotos {
+    border: 8px solid black;
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    left: 175px;
+    top: 50px;
+  }
+
+  .fotoPrincipal {
+    position: absolute;
+    left: 100px;
+    top: 320px;
+    font-size: 12px;
+  }
