--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -28,7 +28,7 @@
     right: 50px;
   }
 
-  .fotos {
+  .fotoPrincipal {
     border: 8px solid black;
     border-radius: 50%;
     width: 250px;
@@ -38,9 +38,85 @@
     top: 50px;
   }
 
-  .fotoPrincipal {
+  .spotify {
+    max-width: 120px;
+    max-height: 120px;
     position: absolute;
-    left: 100px;
-    top: 320px;
-    font-size: 12px;
+    top: 80px;
+    right: 380px;
+    border-radius: 50%;
+    border: 8px solid black;
   }
+
+  .instagram {
+    max-width: 110px;
+    max-height: 110px;
+    position: absolute;
+    top: 200px;
+    right: 130px;
+    border-radius: 50%;
+    border: 8px solid black;
+  }
+
+  .linkedin {
+    max-width: 100px;
+    max-height: 100px;
+    position: absolute;
+    top: 380px;
+    right: 550px;
+    border-radius: 50%;
+    border: 8px solid black;
+  }
+
+  .github {
+    max-width: 100px;
+    max-height: 100px;
+    position: absolute;
+    top: 450px;
+    right: 280px;
+    border-radius: 50%;
+    border: 8px solid black;
+  }
+
+.textoFotoPrincipal {
+  position: absolute;
+  top: 200px;
+  left: -10px;
+}
+
+.textoSpotify {
+  position: absolute;
+  top: -80px;
+  right: 500px;
+}
+
+.textoInstagram {
+  position: absolute;
+  top: -70px;
+  right: -50px;
+}
+
+.textoLinkedin {
+  position: absolute;
+  top: 300px;
+  right: 570px;
+}
+
+.textoGithub {
+  position: absolute;
+  top: 160px;
+  right: 200px;
+}
+
+
+::-webkit-scrollbar-thumb {
+background: #000000;
+height:50px;
+}
+
+
+::-webkit-scrollbar {
+height:15px;
+width:15px;
+background: #292929;
+}
