--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -28,6 +28,14 @@
     right: 50px;
   }
 
+  .iconeVoltar {
+    max-width: 40px;
+    max-height: 40px;
+    position: absolute;
+    top: 25px;
+    left: 60px;
+  }
+
   .fotoPrincipal {
     border: 8px solid black;
     border-radius: 50%;
@@ -92,14 +100,14 @@
 
 .textoInstagram {
   position: absolute;
-  top: -70px;
-  right: -50px;
+  top: 15px;
+  right: 25px;
 }
 
 .textoLinkedin {
   position: absolute;
-  top: 300px;
-  right: 570px;
+  top: 400px;
+  right: 650px;
 }
 
 .textoGithub {
@@ -108,6 +116,11 @@
   right: 200px;
 }
 
+.textoSobre {
+  position: absolute;
+  top: 20px;
+  left: 125px;
+}
 
 ::-webkit-scrollbar-thumb {
 background: #000000;
