--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -39,11 +39,11 @@
   .fotoPrincipal {
     border: 8px solid black;
     border-radius: 50%;
-    width: 250px;
-    height: 250px;
+    width: 300px;
+    height: 300px;
     position: absolute;
-    left: 175px;
-    top: 50px;
+    left: 130px;
+    top: 30px;
   }
 
   .spotify {
@@ -89,13 +89,13 @@
 .textoFotoPrincipal {
   position: absolute;
   top: 200px;
-  left: -10px;
+  left: -60px;
 }
 
 .textoSpotify {
   position: absolute;
-  top: -80px;
-  right: 500px;
+  top: -70px;
+  right: 460px;
 }
 
 .textoInstagram {
@@ -122,11 +122,175 @@
   left: 125px;
 }
 
+.foto02 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 150px;
+  top: 30px;
+}
+
+.foto03 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 50px;
+  top: 30px;
+}
+
+.foto04 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 350px;
+  top: 220px;
+}
+
+.foto05 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 250px;
+  top: 220px;
+}
+
+.foto06 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 150px;
+  top: 220px;
+}
+
+.foto07 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 50px;
+  top: 220px;
+}
+
+.foto08 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 450px;
+  top: 410px;
+}
+
+.foto09 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 350px;
+  top: 410px;
+}
+
+.foto10 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right:  250px;
+  top: 410px;
+}
+
+.foto11 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 150px;
+  top: 410px;
+}
+
+.foto12 {
+  border: 8px solid black;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  right: 50px;
+  top: 410px;
+}
+
+.nomeFormulario {
+background-color: #000000;
+color: #ffffff;
+padding: 10px;
+border-radius: 15px;
+}
+
+.emailFormulario {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.mensagemFormulario {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.btnSubmit {
+  background-color: #000000;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+
+.campoNome {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.campoEmail{
+  background-color: #ffffff;
+  color: #000000;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.campoMensagem {
+  background-color: #ffffff;
+  color: #000000;
+  padding: 10px;
+  border-radius: 15px;
+}
+
+.formulario {
+align-content: center;
+}
+
+
 ::-webkit-scrollbar-thumb {
 background: #000000;
 height:50px;
 }
-
 
 ::-webkit-scrollbar {
 height:15px;
