--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -1,5 +1,5 @@
     body {
-    background-image: url("D:/Aline/uds-trainee/exerciciosComplementares/01/site/imagens/background.png");
+    background-image: url("../imagens/background.png");
     background-repeat: repeat;
     padding: 0px;
     margin: 0px;
@@ -38,12 +38,13 @@
 
   .fotoPrincipal {
     border: 8px solid black;
-    border-radius: 50%;
+    border-radius: 90%;
     width: 300px;
     height: 300px;
     position: absolute;
     left: 130px;
     top: 30px;
+    background-color: black;
   }
 
   .spotify {
@@ -54,6 +55,11 @@
     right: 380px;
     border-radius: 50%;
     border: 8px solid black;
+    opacity: 1;
+  }
+
+  .spotify:hover{
+    opacity: 0.4;
   }
 
   .instagram {
@@ -120,6 +126,9 @@
   position: absolute;
   top: 20px;
   left: 125px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .foto02 {
