--- a/exerciciosComplementares/01/site/css/estilos.css
+++ b/exerciciosComplementares/01/site/css/estilos.css
@@ -5,13 +5,23 @@
     margin: 0px;
     width:100%;
     height: 100%;
-    font-family: verdana;
-    font-weight: bold;
-    color: #000000;
-    white-space: pre;
+    font-family: BatangChe;
+    color: #bebebe;
     text-align: center;
   }
 
+  ::-webkit-scrollbar-thumb {
+  background: #000000;
+  height:50px;
+  }
+
+  ::-webkit-scrollbar {
+  height:15px;
+  width:15px;
+  background: #292929;
+  }
+
+/* icones */
   .iconeSobre {
     max-width: 50px;
     max-height: 50px;
@@ -35,6 +45,13 @@
     top: 25px;
     left: 60px;
   }
+
+  @font-face {
+       font-family: BatangChe;
+       src: url('Batang.ttf');
+  }
+
+  /* Pagina Home */
 
   .fotoPrincipal {
     border: 8px solid black;
@@ -121,6 +138,8 @@
   top: 160px;
   right: 200px;
 }
+
+/* Pagina Sobre */
 
 .textoSobre {
   position: absolute;
@@ -241,68 +260,111 @@
   top: 410px;
 }
 
+/* Pagina Contato */
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+  align-content: center;
+}
+
+form{
+  width: 500px;
+  border: 2px solid black;
+  padding: 1em;
+  border: 1px solid black;
+  border-radius: 1em;
+}
+
+form div{
+  margin-top:10px;
+}
+
+label {
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+    margin-right: 20px;
+}
+
+textarea{
+  vertical-align: top;
+}
+
+input{
+  padding-top: 10px;
+}
+
+input, textarea{
+  width: 300px;
+  border: 1px solid #999;
+}
+
 .nomeFormulario {
 background-color: #000000;
-color: #ffffff;
+color: #bebebe;
 padding: 10px;
 border-radius: 15px;
+text-align: left;
 }
 
 .emailFormulario {
   background-color: #000000;
-  color: #ffffff;
+  color: #bebebe;
   padding: 10px;
   border-radius: 15px;
+  text-align: left;
 }
 
 .mensagemFormulario {
   background-color: #000000;
-  color: #ffffff;
+  color: #bebebe;
   padding: 10px;
   border-radius: 15px;
+  text-align: left;
 }
 
 .btnSubmit {
   background-color: #000000;
-  color: #ffffff;
+  color: #bebebe;
   padding: 10px;
   border-radius: 15px;
+  margin-top: 20px;
+  margin-left: 140px;
 }
 
+#campoNome {
+  background-color: #ffffff;
+  color: #000000;
+  border-radius: 15px;
+  padding: 10px;
+}
 
-.campoNome {
+#campoEmail{
   background-color: #ffffff;
   color: #000000;
   padding: 10px;
   border-radius: 15px;
 }
 
-.campoEmail{
+#campoMensagem {
   background-color: #ffffff;
   color: #000000;
   padding: 10px;
   border-radius: 15px;
+  font-family: arial;
 }
 
-.campoMensagem {
-  background-color: #ffffff;
-  color: #000000;
-  padding: 10px;
-  border-radius: 15px;
+.gif {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.formulario {
-align-content: center;
-}
-
-
-::-webkit-scrollbar-thumb {
-background: #000000;
-height:50px;
-}
-
-::-webkit-scrollbar {
-height:15px;
-width:15px;
-background: #292929;
+.gif img{
+  width: 125px;
 }
