--- a/exerciciosComplementares/Um/site/css/home.css
+++ b/exerciciosComplementares/Um/site/css/home.css
@@ -1,12 +1,11 @@
 .fotoPrincipal {
   border: 8px solid black;
-  border-radius: 90%;
+  border-radius: 50%;
   width: 300px;
   height: 300px;
   position: absolute;
   left: 130px;
   top: 30px;
-  background-color: black;
 }
 
 .spotify {
@@ -17,10 +16,9 @@
   right: 380px;
   border-radius: 50%;
   border: 8px solid black;
-  opacity: 1;
 }
 
-.spotify:hover{
+.spotify:hover {
   opacity: 0.4;
 }
 
@@ -34,6 +32,10 @@
   border: 8px solid black;
 }
 
+.instagram:hover {
+  opacity: 0.4;
+}
+
 .linkedin {
   max-width: 100px;
   max-height: 100px;
@@ -42,6 +44,10 @@
   right: 550px;
   border-radius: 50%;
   border: 8px solid black;
+}
+
+.linkedin:hover {
+  opacity: 0.4;
 }
 
 .github {
@@ -54,10 +60,14 @@
   border: 8px solid black;
 }
 
+.github:hover {
+  opacity: 0.4;
+}
+
 .textoFotoPrincipal {
 position: absolute;
-top: 200px;
-left: -60px;
+top: 300px;
+left: 25px;
 }
 
 .textoSpotify {
@@ -80,6 +90,6 @@ right: 650px;
 
 .textoGithub {
 position: absolute;
-top: 160px;
-right: 200px;
+top: 230px;
+right: 270px;
 }
