--- a/exerciciosComplementares/Um/site/css/padrao.css
+++ b/exerciciosComplementares/Um/site/css/padrao.css
@@ -1,7 +1,7 @@
     body {
     background-image: url("../imagens/background.png");
     background-repeat: repeat;
-    font: 12px josefinSansRegular;
+    font: 12px josefinSansBold;
     padding: 0px;
     margin: 0px;
     width:100%;
@@ -10,10 +10,10 @@
     text-align: center;
   }
 
-    @font-face {
-         font-family: josefinSansRegular;
-         src: url("fontes/josefinSansRegular.ttf");
-    }
+  @font-face {
+    font-family: josefinSansBold;
+    src: url("../fontes/josefinSansBold.ttf");
+}
 
   /* barra de rolagem */
   ::-webkit-scrollbar-thumb {
