--- a/exercicios-complementares/aula-01/site/css/home.css
+++ b/exercicios-complementares/aula-01/site/css/home.css
@@ -1,9 +1,16 @@
-.fotoPrincipal {
-  border: 8px solid black;
+.fotoPrincipal, .spotify, .instagram, .linkedin, .github {
   border-radius: 50%;
+  border: 8px solid black;
+  position: absolute;
+}
+
+.github:hover, .linkedin:hover, .instagram:hover, .spotify:hover {
+  opacity: 0.4;
+}
+
+.fotoPrincipal {
   width: 300px;
   height: 300px;
-  position: absolute;
   left: 130px;
   top: 30px;
 }
@@ -11,85 +18,56 @@
 .spotify {
   max-width: 120px;
   max-height: 120px;
-  position: absolute;
   top: 240px;
   right: 490px;
-  border-radius: 50%;
-  border: 8px solid black;
-}
-
-.spotify:hover {
-  opacity: 0.4;
 }
 
 .instagram {
   max-width: 110px;
   max-height: 110px;
-  position: absolute;
   top: 200px;
   right: 130px;
-  border-radius: 50%;
-  border: 8px solid black;
-}
-
-.instagram:hover {
-  opacity: 0.4;
 }
 
 .linkedin {
   max-width: 100px;
   max-height: 100px;
-  position: absolute;
   top: 460px;
   right: 645px;
-  border-radius: 50%;
-  border: 8px solid black;
-}
-
-.linkedin:hover {
-  opacity: 0.4;
 }
 
 .github {
   max-width: 100px;
   max-height: 100px;
-  position: absolute;
   top: 480px;
   right: 250px;
-  border-radius: 50%;
-  border: 8px solid black;
 }
 
-.github:hover {
-  opacity: 0.4;
+.textoFotoPrincipal, .textoSpotify, .textoInstagram, .textoLinkedin, .textoGithub {
+  position: absolute;
 }
 
 .textoFotoPrincipal {
-position: absolute;
 top: 300px;
 left: 25px;
 }
 
 .textoSpotify {
-position: absolute;
 top: 5px;
 right: 350px;
 }
 
 .textoInstagram {
-position: absolute;
 top: 5px;
 right: 10px;
 }
 
 .textoLinkedin {
-position: absolute;
 top: 260px;
 right: 640px;
 }
 
 .textoGithub {
-position: absolute;
 top: 265px;
 right: 240px;
 }
