Posicionando icones e exercicio 12 incompleto

--- a/exercicios-complementares/aula-01/site/css/home.css
+++ b/exercicios-complementares/aula-01/site/css/home.css
@@ -71,3 +71,14 @@ right: 640px;
 top: 265px;
 right: 240px;
 }
+
+.iconeSobre {
+  position: absolute;
+  right: 90px;
+  top: 570px;
+}
+.iconeContato {
+  position: absolute;
+  right: 20px;
+  top: 570px;
+}
