--- a/exercicios-complementares/aula-01/site/css/contato.css
+++ b/exercicios-complementares/aula-01/site/css/contato.css
@@ -105,3 +105,14 @@ text-align: left;
 .gif img{
   width: 125px;
 }
+
+.iconeSobre {
+  position: absolute;
+  right: 90px;
+  top: 570px;
+}
+.iconeContato {
+  position: absolute;
+  right: 20px;
+  top: 570px;
+}
