--- a/exercicios-complementares/aula-01/site/css/sobre.css
+++ b/exercicios-complementares/aula-01/site/css/sobre.css
@@ -9,3 +9,14 @@
   right: 70px;
   top: 30px;
 }
+
+.iconeSobre {
+  position: absolute;
+  right: 90px;
+  top: 800px;
+}
+.iconeContato {
+  position: absolute;
+  right: 20px;
+  top: 800px;
+}
